@@ -289,238 +289,4 @@ module StylingPrettyPrinters: Ocolor_pp.PRETTY_PRINTERS
 module NonStylingPrettyPrinters: Ocolor_pp.PRETTY_PRINTERS
   with type formatter := Format.formatter
 
-
-(** {4 Generic functions} *)
-(** These functions come from [StylingPrettyPrinters]
-*)
-
-(** Pretty print a bool. Useful with %a. It displays boolean as %b but with
-    styles.
-    [false_style] defaults to
-    [[Ocolor_types.Bold;Ocolor_types.Fg (C4 Ocolor_values.red)]] (ie. red and
-    bold) and [true_style] defaults to
-    [[Ocolor_types.Bold;Ocolor_types.Fg (C4 Ocolor_values.green)]] (ie. green and
-    bold). *)
-val pp_bool_generic:
-  ?false_style:Ocolor_types.style list ->
-  ?true_style:Ocolor_types.style list ->
-  Format.formatter -> bool -> unit
-
-(** Pretty print a list. Useful with %a.
-    Default settings:
-    - [left] = ["\["]
-    - [sep] = ["; "]
-    - [right] = ["\]"]
-    - [delim_style] = [Ocolor_types.[Faint]]
-    - [sep_style] = [Ocolor_types.[Faint]]
-    - [elem_style] = [[]]
-
-    Moreover, it need a (pretty) printer that prints an element
-
-    With default settings, if the list is empty it prints "[]". If the list
-    contains only one element [a], it prints "[a]". Otherwise, elements are
-    separated by "; " without final separator, for instance "[a; b; c]"
-
-    [delim_style] is applied to [left] and [right], [sep_style] is applied to
-    [sep] and [elem_style] is applied to each element. In particular, the pretty
-    printer will work in the context set by [elem_style], so it does not need to
-    apply the same style once again (however, it is harmless).
-*)
-val pp_list_generic:
-  ?left:string -> ?sep:string -> ?right:string ->
-  ?delim_style:Ocolor_types.style list ->
-  ?sep_style:Ocolor_types.style list ->
-  ?elem_style:Ocolor_types.style list ->
-  (Format.formatter -> 'a -> unit) -> Format.formatter -> 'a list -> unit
-
-(** Pretty print an option. Useful with %a.
-    Default settings:
-    - [none] = ["None"]
-    - [none_style] = [Ocolor_types.[Faint]]
-    - [some_style] = [[]]
-
-    Moreover, it need a (pretty) printer that prints the content of the option.
-
-    It prints [none] when the option is [None] with the style [none_style], and
-    [p a] where [p] is the printer and the option is [Some a]. In particular, it
-    does not display "Some" or something like that.
-*)
-val pp_option_generic:
-  ?none:string ->
-  ?none_style:Ocolor_types.style list ->
-  ?some_style:Ocolor_types.style list ->
-  (Format.formatter -> 'a -> unit) -> Format.formatter -> 'a option -> unit
-
-(** Pretty print a pair. Useful with %a.
-    Default settings:
-    - [left] = ["("]
-    - [sep] = [", "]
-    - [right] = [")"]
-    - [delim_style] = [Ocolor_types.[Faint]]
-    - [sep_style] = [Ocolor_types.[Faint]]
-    - [elem_style] = [[]]
-
-    Moreover, it need two (pretty) printers that prints each part of the pair.
-
-    [delim_style] is applied to [left] and [right], [sep_style] is applied to
-    [sep] and [elem_style] is applied to each element. In particular, the pretty
-    printer will work in the context set by [elem_style], so it does not need to
-    apply the same style once again (however, it is harmless).
-*)
-val pp_pair_generic:
-  ?left:string -> ?sep:string -> ?right:string ->
-  ?delim_style:Ocolor_types.style list -> ?sep_style:Ocolor_types.style list -> ?elem_style:Ocolor_types.style list ->
-  (Format.formatter -> 'a -> unit) ->
-  (Format.formatter -> 'b -> unit) ->
-  (Format.formatter) ->
-  ('a * 'b) -> unit
-
-val pp_3_tuple_generic:
-  ?left:string -> ?sep:string -> ?right:string ->
-  ?delim_style:Ocolor_types.style list -> ?sep_style:Ocolor_types.style list -> ?elem_style:Ocolor_types.style list ->
-  (Format.formatter -> 'a -> unit) ->
-  (Format.formatter -> 'b -> unit) ->
-  (Format.formatter -> 'c -> unit) ->
-  (Format.formatter) ->
-  ('a * 'b * 'c) -> unit
-
-val pp_4_tuple_generic:
-  ?left:string -> ?sep:string -> ?right:string ->
-  ?delim_style:Ocolor_types.style list -> ?sep_style:Ocolor_types.style list -> ?elem_style:Ocolor_types.style list ->
-  (Format.formatter -> 'a -> unit) ->
-  (Format.formatter -> 'b -> unit) ->
-  (Format.formatter -> 'c -> unit) ->
-  (Format.formatter -> 'd -> unit) ->
-  (Format.formatter) ->
-  ('a * 'b * 'c * 'd) -> unit
-
-val pp_5_tuple_generic:
-  ?left:string -> ?sep:string -> ?right:string ->
-  ?delim_style:Ocolor_types.style list -> ?sep_style:Ocolor_types.style list -> ?elem_style:Ocolor_types.style list ->
-  (Format.formatter -> 'a -> unit) ->
-  (Format.formatter -> 'b -> unit) ->
-  (Format.formatter -> 'c -> unit) ->
-  (Format.formatter -> 'd -> unit) ->
-  (Format.formatter -> 'e -> unit) ->
-  (Format.formatter) ->
-  ('a * 'b * 'c * 'd * 'e) -> unit
-
-(** Print an itarable set-like data structure
-    Default settings:
-    - [left] = ["{"]
-    - [sep] = ["; "]
-    - [right] = ["}"]
-    - [delim_style] = [Ocolor_types.[Faint]]
-    - [sep_style] = [Ocolor_types.[Faint]]
-    - [elem_style] = [[]]
-*)
-val pp_iterable_generic:
-  ?left:string -> ?sep:string -> ?right:string ->
-  ?delim_style:Ocolor_types.style list ->
-  ?sep_style:Ocolor_types.style list ->
-  ?elem_style:Ocolor_types.style list ->
-  (('value -> unit) -> 't -> unit) ->
-  (Format.formatter -> 'value -> unit) ->
-  Format.formatter -> 't -> unit
-
-(** Print an itarable map-like data structure
-    Default settings:
-    - [left] = ["{"]
-    - [sep] = ["; "]
-    - [right] = ["}"]
-    - [delim_style] = [Ocolor_types.[Faint]]
-    - [sep_style] = [Ocolor_types.[Faint]]
-*)
-val pp_iterable_mapping_more_generic:
-    ?left:string -> ?sep:string -> ?right:string ->
-    ?delim_style:Ocolor_types.style list ->
-    ?sep_style: Ocolor_types.style list ->
-    (('key -> 'value -> unit) -> 't -> unit) ->
-    (Format.formatter -> 'key * 'value -> unit) ->
-    Format.formatter -> 't -> unit
-
-(** Print an itarable map-like data structure as a sequence of
-    <key><mapsto><value> separeted by <sep>.
-    Default settings:
-    - [left] = ["{"]
-    - [sep] = ["; "]
-    - [right] = ["}"]
-    - [mapsto] = [":"]
-    - [delim_style] = [Ocolor_types.[Faint]]
-    - [sep_style] = [Ocolor_types.[Faint]]
-    - [mapsto_style] = [Ocolor_types.[Faint]]
-    - [key_style] = [[]]
-    - [value_style] = [[]]
-*)
-val pp_iterable_mapping_generic:
-  ?left:string -> ?sep:string -> ?right:string ->
-  ?mapsto:string ->
-  ?delim_style:Ocolor_types.style list ->
-  ?sep_style:Ocolor_types.style list ->
-  ?mapsto_style:Ocolor_types.style list ->
-  ?key_style:Ocolor_types.style list ->
-  ?value_style:Ocolor_types.style list ->
-  (('key -> 'value -> unit) -> 't -> unit) ->
-  (Format.formatter -> 'key -> unit) ->
-  (Format.formatter -> 'value -> unit) ->
-  Format.formatter -> 't -> unit
-
-
-(** {4 Default pretty printers} *)
-
-(** Like {!pp_bool_generic} with default settings *)
-val pp_bool: Format.formatter -> bool -> unit
-
-(** Like {!pp_list_generic} with default settings *)
-val pp_list: (Format.formatter -> 'a -> unit) -> Format.formatter -> 'a list -> unit
-
-(** Like {!pp_option_generic} with default settings *)
-val pp_option: (Format.formatter -> 'a -> unit) -> Format.formatter -> 'a option -> unit
-
-(** Like {!pp_pair_generic} with default settings *)
-val pp_pair:
-  (Format.formatter -> 'a -> unit) ->
-  (Format.formatter -> 'b -> unit) ->
-  (Format.formatter) ->
-  ('a * 'b) -> unit
-
-(** Like {!pp_3_tuple_generic} with default settings *)
-val pp_3_tuple:
-  (Format.formatter -> 'a -> unit) ->
-  (Format.formatter -> 'b -> unit) ->
-  (Format.formatter -> 'c -> unit) ->
-  (Format.formatter) ->
-  ('a * 'b * 'c) -> unit
-
-(** Like {!pp_4_tuple_generic} with default settings *)
-val pp_4_tuple:
-  (Format.formatter -> 'a -> unit) ->
-  (Format.formatter -> 'b -> unit) ->
-  (Format.formatter -> 'c -> unit) ->
-  (Format.formatter -> 'd -> unit) ->
-  (Format.formatter) ->
-  ('a * 'b * 'c * 'd) -> unit
-
-(** Like {!pp_5_tuple_generic} with default settings *)
-val pp_5_tuple:
-  (Format.formatter -> 'a -> unit) ->
-  (Format.formatter -> 'b -> unit) ->
-  (Format.formatter -> 'c -> unit) ->
-  (Format.formatter -> 'd -> unit) ->
-  (Format.formatter -> 'e -> unit) ->
-  (Format.formatter) ->
-  ('a * 'b * 'c * 'd * 'e) -> unit
-
-(** Default version of pp_iterable_generic *)
-val pp_iterable:
-  (('value -> unit) -> 't -> unit) ->
-  (Format.formatter -> 'value -> unit) ->
-  Format.formatter -> 't -> unit
-
-(** Default version of pp_iterable_mapping_generic *)
-val pp_iterable_mapping:
-  (('key -> 'value -> unit) -> 't -> unit) ->
-  (Format.formatter -> 'key -> unit) ->
-  (Format.formatter -> 'value -> unit) ->
-  Format.formatter -> 't -> unit
-
+include Ocolor_pp.PRETTY_PRINTERS with type formatter := Format.formatter
